--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,6 +2,7 @@
     "compileOnSave": false,
     "compilerOptions": {
         "outDir": "./dist/out-tsc",
+        "baseUrl": "./",
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "noImplicitOverride": true,
